[package]
name = "ratios"
version = "0.1.0"
edition = "2021"
description = "Cli tool to quickly adjust the ratio of a recipe."
license = "MIT OR Apache-2.0"
repository = "https://github.com/kloki/ratios"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
ratatui = "0.28.0"
tokio = { version = "1.41.1", features = [
  "rt",
  "macros",
  "time",
  "rt-multi-thread",
] }
futures = "0.3.30"
crossterm = { version = "0.28.1", features = ["event-stream"] }
tui-textarea = "0.6.1"
